# log_depths

./: .gitignore  CMakeLists.txt  experiment_description.md  main.cpp  recording_setup.txt  requirements.txt  tof_analysis.ipynb  tof_analysis_office-vs-darkcellar-vs-lightcellar.ipynb
.ipynb_checkpoints/: tof_analysis-checkpoint.ipynb  tof_analysis_office-vs-darkcellar-vs-lightcellar-checkpoint.ipynb
logs/outdoors/: outdoors_notes.txt
